service and ingress

--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -8,6 +8,9 @@ image:
     url: elastic/filebeat:7.17.0
     pullPolicy: IfNotPresent
 
+port: 4000
+targetPort: 4000
+
 logPath: /app/logs
 
 replicas: 1
