--- a/.helm/templates/service.yaml
+++ b/.helm/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: duck-api
+  name: {{ .Release.Name }}
   namespace: {{ .Values.namespace }}
   labels:
-    service: duck-api
+    service: {{ .Release.Name }}
 spec:
   selector:
-    service: duck-api
+    service: {{ .Release.Name }}
   ports:
   - name: http
     port: {{ .Values.port }}
